2012-09-06  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/third-party/CGAL-4.0.2/cmake/modules/CGAL_SetupGMP.cmake:

	- Don't use find_package() for GMP and MPFR. Now they are part of
	gerardus, and we use ExternalProject_Add() to build them.

	* cpp/src/CMakeLists.txt: (v0.2.2)

	- Fix bug. Imported libraries cannot be of type unknown.

	- Add several variables that provide the path to the GMP and MPFR
	libraries. <package>_LIBRARIES_DIR is not a standard variable
	name, but it's used by CGAL.

	* cpp/src/CMakeLists.txt: (v0.2.1)

	- Create targets for the GMP and MPFR libraries, so that we can
	use them as dependencies, link to them, etc...

	* cpp/src/CMakeLists.txt: (v0.2.0)
	* Delete cpp/src/third-party/gmp-5.0.5/CMakeLists.txt
	* Delete cpp/src/third-party/mpfr-3.1.1/CMakeLists.txt

	- From cmake 2.8.8 onwards, external projects that don't use CMake
	can be built using module ExternalProject_Add(). This is what we
	use now to build the GMP and MPFR libraries.

2012-09-05  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/CMakeLists.txt: (v0.5.2)

	- Fix bug. ItkRegistration.cpp is experimental code that hasn't
	been added to the repository yet, so comment out creating a
	target for it.

	* CMakeLists.txt: (v0.2.0)

	- Boost library is now distributed with Gerardus, so it's no
	longer an external dependency that can be configured with
	find_package(). Instead, we set up the required variables here.

	- Tidy up the messages displayed.

	* cpp/src/CMakeLists.txt: (v0.1.4)

	- Because boost is now part of Gerardus, we link to its libraries
	as targets, not as library files.

	* cpp/src/third-party/boost/boost/thread/CMakeLists.txt
	* cpp/src/third-party/boost/boost/system/CMakeLists.txt
	* cpp/src/third-party/boost/boost/filesystem/CMakeLists.txt

	- Don't limit building the boost library to static libraries. By
	not specifying RUNTIME, ARCHIVE or LIBRARY, the right type of
	library will be selected.
